make sure popovers work again

--- a/plugins/CoreHome/templates/_indexContent.twig
+++ b/plugins/CoreHome/templates/_indexContent.twig
@@ -12,6 +12,8 @@
 
     {{ ajax.loadingDiv() }}
 
+    <div piwik-popover></div>
+
     <div id="content" class="home">
         {% if content %}{{ content }}{% endif %}
         <div piwik-reporting-page></div>
