--- a/plugins/Widgetize/templates/iframe.twig
+++ b/plugins/Widgetize/templates/iframe.twig
@@ -14,6 +14,7 @@
     <!--[if lt IE 9 ]>
     <body ng-app="app" class="old-ie"> <![endif]-->
     <!--[if (gte IE 9)|!(IE)]><!-->
+    <div piwik-popover-handler></div>
     <body ng-app="app">
     <![endif]-->
         <div class="widget">
